tests/ui/coherence/coherence-orphan.stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/coherence-orphan.rs:10:1
   |
LL | impl TheTrait<usize> for isize {}
   | ^^^^^---------------^^^^^-----
   |      |                   |
   |      |                   `isize` is not defined in the current crate
   |      `usize` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> $DIR/coherence-orphan.rs:17:1
   |
LL | impl !Send for Vec<isize> {}
   | ^^^^^^^^^^^^^^^----------
   |                |
   |                `Vec` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
